hphp/hack/test/ifc/check/generics.php.exp
=== IFC analysis results for generics.php
File "generics.php", line 45, characters 24-25:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 41, characters 3-16:
  Another program point contributing to the illegal flow
  File "generics.php", line 45, characters 3-34:
  Another program point contributing to the illegal flow
File "generics.php", line 53, characters 3-19:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 41, characters 3-16:
  Another program point contributing to the illegal flow
  File "generics.php", line 50, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 49, characters 3-36:
  Another program point contributing to the illegal flow
File "generics.php", line 37, characters 3-20:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "generics.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "generics.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
  File "generics.php", line 29, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 33, characters 3-19:
  Another program point contributing to the illegal flow
  File "generics.php", line 36, characters 3-15:
  Another program point contributing to the illegal flow
File "generics.php", line 37, characters 3-20:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
  File "generics.php", line 28, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 33, characters 3-19:
  Another program point contributing to the illegal flow
  File "generics.php", line 36, characters 3-15:
  Another program point contributing to the illegal flow
File "generics.php", line 36, characters 3-15:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
  File "generics.php", line 28, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 30, characters 5-17:
  Another program point contributing to the illegal flow
File "generics.php", line 36, characters 3-15:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
  File "generics.php", line 28, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 30, characters 5-17:
  Another program point contributing to the illegal flow
  File "generics.php", line 33, characters 3-19:
  Another program point contributing to the illegal flow
File "generics.php", line 37, characters 3-20:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "generics.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "generics.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "generics.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
  File "generics.php", line 36, characters 3-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 29, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
File "generics.php", line 37, characters 3-20:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "generics.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "generics.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "generics.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
  File "generics.php", line 36, characters 3-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 33, characters 3-19:
  Another program point contributing to the illegal flow
  File "generics.php", line 29, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
File "generics.php", line 37, characters 3-20:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
  File "generics.php", line 36, characters 3-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 28, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
File "generics.php", line 37, characters 3-20:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
  File "generics.php", line 36, characters 3-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 33, characters 3-19:
  Another program point contributing to the illegal flow
  File "generics.php", line 28, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
File "generics.php", line 37, characters 3-20:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
  File "generics.php", line 36, characters 3-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 30, characters 5-17:
  Another program point contributing to the illegal flow
  File "generics.php", line 28, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
File "generics.php", line 36, characters 3-15:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
  File "generics.php", line 30, characters 5-17:
  Another program point contributing to the illegal flow
  File "generics.php", line 28, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
File "generics.php", line 37, characters 3-20:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
  File "generics.php", line 36, characters 3-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 33, characters 3-19:
  Another program point contributing to the illegal flow
  File "generics.php", line 30, characters 5-17:
  Another program point contributing to the illegal flow
  File "generics.php", line 28, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
File "generics.php", line 36, characters 3-15:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "generics.php", line 9, characters 14-19:
  This may be the data source with policy `B`
  File "generics.php", line 6, characters 14-19:
  This may be the data sink with policy `A`
  File "generics.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
  File "generics.php", line 33, characters 3-19:
  Another program point contributing to the illegal flow
  File "generics.php", line 30, characters 5-17:
  Another program point contributing to the illegal flow
  File "generics.php", line 28, characters 5-15:
  Another program point contributing to the illegal flow
  File "generics.php", line 27, characters 3-76:
  Another program point contributing to the illegal flow
File "generics.php", line 23, characters 3-20:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "generics.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "generics.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "generics.php", line 14, characters 3-12:
  Another program point contributing to the illegal flow
